# Modern-Store-Of-Value

./: .gitignore  README.md
Commodities_EDA/: commodities.ipynb
CryptoAnalysis/: CryptoAnalysis.ipynb  CryptoDataDownload.py  CryptoEDA.ipynb  main.py  pyproject.toml
CryptoAnalysis/docs/: TODO.md
Stocks_EDA/: all_stocks.csv  pyproject.toml  stock_list.txt  stock_piperunner.py  stock_plotting.py  stock_pull.py
resources/: DailyWilshire5000.csv  WeeklyWilshire5000.csv  Wilshire5000WeeklyData.csv
src/crypto/: CryptoDataDownload.py  WilshireDataDownload.py
src/stocks/: stock_list.txt  stock_plotting.py  stock_pull.py
