[project]
name = "cryptoanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mplfinance>=0.12.10b0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "uv>=0.10.7",
]
